syntax = "proto3";

package trusted.v1;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

message HealthCheckResponse {
  bool status = 1;
  bytes error = 2;
}

message AddTxRequest {
    bytes txdata = 1;
}

message AddTxResponse {
    bytes txhash = 1;
    string error = 2;
}

message StatusRequest {}

message StatusResponse {
    uint64 pending = 1;
    uint64 queue   = 2;
}

message ResetRequest {}
message ResetResponse {
    string error = 1;
}

message PendingRequest {}

message PendingResponse {
    repeated bytes txs = 1;
}

message BlockRequest {
    bytes block_hash = 1;
    uint64 block_num = 2;
}

message BlockResponse {
    bytes block_data = 1;
}

message BalanceRequest {
    bytes address = 1;
    bytes block_num = 2;
}

message BalanceResponse {
    bytes balance = 1;
}

message NonceRequest {
    bytes address = 1;
    bytes block_num = 2;
}

message NonceResponse {
    uint64 nonce = 1;
}

message LatestHeaderRequest { }
message LatestHeaderResponse {
    bytes block_num = 1;
    bytes header_json = 2;
}

message CurrentBlockRequest {}
message CurrentBlockResponse {
    bytes block_data = 1;
}

message ChainHeadEventRequest {}
message ChainHeadEventResponse {
    bytes block_data = 1;
}

message CryptRequest {
    uint32 method = 1;
    bytes data = 2;
}
message CryptResponse {
    bytes crypted = 1;
}

message AddTrustedTxRequest {
    bytes ctypted_tx = 1;
}

message AddTrustedTxResponse {
    bytes hash = 1;
    bytes asset = 2;
}